# market-sim

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: test.yml
benchmark/: benchmark_order_book.cpp
docs/: _exchange_8hpp_source.html  _market_data_8hpp_source.html  _market_utils_8hpp_source.html  _matching_engine_8hpp_source.html  _order_8hpp_source.html  _order_book_8hpp_source.html  _order_book_p_q_8hpp_source.html  _order_utils_8hpp_source.html  _position_8hpp_source.html  _trade_8hpp_source.html  _trader_8hpp_source.html  _trader_utils_8hpp_source.html  annotated.html  annotated_dup.js  class_exchange-members.html  class_exchange.html  class_exchange.js  class_m_maker_trader-members.html  class_m_maker_trader.html  class_m_taker_trader.html  class_market_data-members.html  class_market_data.html  class_order-members.html  class_order.html  class_order_book.html  class_order_book_p_q-members.html  class_order_book_p_q.html  class_trader-members.html  class_trader.html  concept_derived_trader.html  concepts.html  concepts.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  menudata.js  (+15 more)
docs/html/: _exchange_8hpp_source.html  _market_data_8hpp_source.html  _market_utils_8hpp_source.html  _order_8hpp_source.html  _trader_8hpp_source.html  _trader_utils_8hpp_source.html  annotated.html  class_m_maker_trader.js  class_m_taker_trader-members.html  class_m_taker_trader.js  class_market_data.js  class_order.js  class_order_book-members.html  class_order_book.js  class_order_book_p_q.html  class_order_book_p_q.js  class_trader.html  class_trader.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  menudata.js  navtreedata.js  navtreeindex0.js  struct_order_utils_1_1_buy_order_compare.html  struct_order_utils_1_1_buy_order_compare_p_q-members.html  struct_order_utils_1_1_buy_order_compare_p_q.html  struct_order_utils_1_1_sell_order_compare-members.html  struct_trade-members.html  struct_trader_hash.html
docs/latex/: _exchange_8hpp_source.tex  _market_data_8hpp_source.tex  _market_utils_8hpp_source.tex  _matching_engine_8hpp_source.tex  _order_8hpp_source.tex  _order_book_8hpp_source.tex  _order_book_p_q_8hpp_source.tex  _order_utils_8hpp_source.tex  _position_8hpp_source.tex  _trade_8hpp_source.tex  _trader_8hpp_source.tex  _trader_utils_8hpp_source.tex  annotated.tex  class_exchange.tex  class_m_maker_trader.tex  class_m_taker_trader.tex  class_market_data.tex  class_order.tex  class_order_book.tex  class_order_book_p_q.tex  class_trader.tex  concept_derived_trader.tex  concepts.tex  files.tex  hierarchy.tex  (+10 more)
include/: Exchange.hpp  FairPrice.hpp  MarketData.hpp  MarketUtils.hpp  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  OrderBookPQ.hpp  OrderUtils.hpp  Position.hpp  Simulator.hpp  Trade.hpp  Trader.hpp  TraderUtils.hpp
py_data_analysis/: README.md  analysis.ipynb  pyproject.toml
script/: test.sh
src/: Exchange.cpp  MarketData.cpp  MatchingEngine.cpp  Order.cpp  OrderBook.cpp  OrderBookPQ.cpp  Trade.cpp  Trader.cpp  main.cpp
test/: main.cpp  test_empty_order_book.cpp  test_exchange.cpp  test_market_data.cpp  test_order.cpp  test_order_book.cpp  test_order_book_pq.cpp  test_trade.cpp  test_trader.cpp
(+36 files in other folders)
